# hello_mpi

./: CMakeLists.txt  LICENSE  README.md  hello_mpi.cpp
